[FEATURE]-- link added to the flats.html

--- a/flat-html/portfolio-single-15.html
+++ b/flat-html/portfolio-single-15.html
@@ -56,13 +56,13 @@
                     <span>Conciergerie</span>
                 </div>
                 <ul class="conciergerie-main-nav">
-                    <li><a href="./index.html">Accueil</a></li>
-                    <li><a href="./about-us.html">About</a></li>
-                    <li><a href="./solution.html">Nos Solutions</a></li>
-                    <li><a href="./portfolio-classic.html">Nos biens</a></li>
-                    <li><a href="./blog-creative.html">Blog</a></li>
-                    <li><a href="./contact-1.html">Contact</a></li>
-                </ul>
+                  <li><a href="../index.html">Accueil</a></li>
+                  <li><a href="../about-us.html">About</a></li>
+                  <li><a href="../solution.html">Nos Solutions</a></li>
+                  <li><a href="../portfolio-classic.html">Nos biens</a></li>
+                  <li><a href="../blog-creative.html">Blog</a></li>
+                  <li><a href="../contact-1.html">Contact</a></li>
+              </ul>
                 <div class="conciergerie-hamburger-menu">
                     <div class="menu-icon"><i class="fa fa-bars"></i></div>
                     <div class="menu-icon"><i class="fa fa-phone" id="phone-icon"></i>
