--- a/flat-html/portfolio-single-10.html
+++ b/flat-html/portfolio-single-10.html
@@ -64,7 +64,7 @@
                 </div>
                 <ul class="conciergerie-main-nav">
                   <li><a href="../index.html">Accueil</a></li>
-                  <li><a href="../about-us.html">About</a></li>
+                  <li><a href="../a propos.html">a propos</a></li>
                   <li><a href="../solution.html">Nos Solutions</a></li>
                   <li><a href="../portfolio-classic.html">Nos biens</a></li>
                   <li><a href="../blog-creative.html">Blog</a></li>
@@ -79,7 +79,7 @@
                   <span class="close-button">&times;</span>
                   <ul>
                     <li><a href="./index.html">Accueil</a></li>
-                    <li><a href="./about-us.html">About</a></li>
+                    <li><a href="./a propos.html">a propos</a></li>
                     <li><a href="./solution.html">Nos Solutions</a></li>
                     <li><a href="./portfolio-classic.html">Nos biens</a></li>
                     <li><a href="./blog-creative.html">Blog</a></li>
@@ -124,12 +124,12 @@
                       </li>
                       <li class="has-sub">
                           <a href="#">
-                              <span>About</span>
+                              <span>a propos</span>
                           </a>
                           <ul>
                               <li>
-                                  <a href="about-us.html">
-                                      <span>About us</span>
+                                  <a href="a propos.html">
+                                      <span>a propos us</span>
                                   </a>
                               </li>
                           </ul>
@@ -263,19 +263,7 @@
       <div class="row">
         <div class="col-md-12">
 
-      <!-- social icons -->
-      <div class="social-icons">
-            
-        <ul>
-          <li><a href="#">INSTAGRAM</a></li>
-          <li><a href="#">FACEBOOK</a></li>
-          <li><a href="#">MEDIA 3</a></li>   
-          <li><a href="#">MEDIA 4</a></li>  
-          <li><a href="#">MEDIA 5</a></li>    
-        </ul>
 
-      </div>
-      <!-- /social icons -->  
 
       <!-- copyright -->
       <div class="copyright">
